--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -277,9 +277,9 @@ section.success a.active {
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 50;
+    opacity: 0;
 /*    background: rgba(24,188,156,.9);*/
-    background: #fff;
+    background: rgba(24,188,156,.5);;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
